<?xml version="1.0"?>
<package>
  <name>robotis_controller_msgs</name>
  <version>0.1.0</version>
  <description>The robotis_controller_msgs package</description>
  <maintainer email="zerom@robotis.com">robotis</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/robotis_controller_msgs</url> -->

  <author email="zerom@robotis.com">ROBOTIS</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>